--- a/cicd/dev/Jenkinsfile
+++ b/cicd/dev/Jenkinsfile
@@ -2,14 +2,22 @@ pipeline {
     agent any
 
     environment {
+        APP_NAME = 'dms-server'
+        
         BUILD_TARGET = 'dev'
-        DOCKER_CONTAINER_NAME = "dms-server"
-        DOCKER_IMAGE = "dnjsakf/${DOCKER_CONTAINER_NAME}"
-        DOCKER_IMAGE_TAG = "${env.BUILD_ID}-${BUILD_TARGET}"
-        DOCKER_CREDENTIALS_ID = 'docker-credentials'
-        BUILD_HOME = "${env.JENKINS_HOME}/build/${env.JOB_NAME}"
-        WORKSPACE_MAIN = "${env.WORKSPACE}"
-        CI = false
+        BUILD_VERSION = "1.0.${env.BUILD_ID}-${env.BUILD_TARGET}"
+
+        DEPLOY_CREDENTIALS_ID = 'github-user'
+        DEPLOY_REPO_URL = 'github.com/dnjsakf/argocd-apps.git'
+        DEPLOY_PATH = "${env.APP_NAME}/${env.APP_NAME}-deployment.yaml"
+
+        DOCKER_CREDENTIALS_ID = 'docker-user'
+        DOCKER_IMAGE_NAME = "dnjsakf/${env.APP_NAME}"
+        DOCKER_IMAGE_TAG = "${env.DOCKER_IMAGE_NAME}:${env.BUILD_VERSION}"
+        DOCKER_IMAGE_TAG_LATEST = "${env.DOCKER_IMAGE_NAME}:latest"
+
+        ARGOCD_SERVER = 'https://host.docker.internal:38080'
+        ARGOCD_AUTH_TOKEN = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJhcmdvY2QiLCJzdWIiOiJhcGl1c2VyOmFwaUtleSIsIm5iZiI6MTcyODAyMDM1OCwiaWF0IjoxNzI4MDIwMzU4LCJqdGkiOiI1NjIzODM5Yy0yY2VmLTQzMzktYjc5NS02OGM5OTJiOTJhNjcifQ.XLd48Zyd1bU14SpFDnGZrJlf5t4ua3rqKHBHJAo6n3k'
     }
 
     stages {
@@ -17,44 +25,38 @@ pipeline {
             steps {
                 echo "Express is no build"
             }
-            // agent {
-            //     docker {
-            //         image 'node:22.7.0-alpine'
-            //         args '-p 4000:3000'
-            //     }
-            // }
-            // steps {
-            //     sh 'npm install'
-            //     sh 'npm run build'
-            // }
         }
 
-        stage('Push') {
+        stage('Stop Container & Remove Image') {
             steps {
                 script {
-                    // 기존 컨테이너 중지 및 삭제
                     sh """
-                    if [ \$(docker ps -q -f name=${DOCKER_CONTAINER_NAME}) ]; then
-                        docker stop ${DOCKER_CONTAINER_NAME}
-                        docker rm ${DOCKER_CONTAINER_NAME}
+                    if [ \$(docker ps -a -q -f name=\"${env.APP_NAME}\") ]; then
+                        docker stop ${env.APP_NAME}
+                        docker rm ${env.APP_NAME}
                     fi
                     """
-                    
-                    // 새로운 컨테이너 실행
-                    docker.withRegistry('https://index.docker.io/v1/', "${DOCKER_CREDENTIALS_ID}") {
-                        def nodeImage = docker.build("${DOCKER_IMAGE}:${DOCKER_IMAGE_TAG}", "-f ./cicd/${BUILD_TARGET}/Dockerfile .")
-                        nodeImage.push()
-                    }
+                    sh """
+                    IMAGE_ID=\$(docker images -q -f reference=${env.DOCKER_IMAGE_TAG_LATEST})
+                    if [ -n "\$IMAGE_ID" ]; then
+                        echo "Docker Image Clean...  ${env.DOCKER_IMAGE_TAG_LATEST}"
+                        docker rmi ${env.DOCKER_IMAGE_TAG_LATEST}
+                    fi
+                    """
                 }
             }
         }
 
-        stage('Deploy') {
+        stage('Docker Image Build & Push') {
             steps {
-                echo 'Deploying....'
                 script {
-                    def container = docker.image("${DOCKER_IMAGE}:${DOCKER_IMAGE_TAG}")
-                    container.run("-d -p 4000:3000 --name ${DOCKER_CONTAINER_NAME}")
+                    docker.withRegistry('https://index.docker.io/v1/', "${env.DOCKER_CREDENTIALS_ID}") {
+                        def buildImage = docker.build("${env.DOCKER_IMAGE_TAG}", "-f ./cicd/${env.BUILD_TARGET}/Dockerfile .")
+                        buildImage.push()
+
+                        sh "docker tag ${env.DOCKER_IMAGE_TAG} ${env.DOCKER_IMAGE_TAG_LATEST}"
+                        sh "docker push ${env.DOCKER_IMAGE_TAG_LATEST}"
+                    }
                 }
             }
         }
@@ -63,6 +65,16 @@ pipeline {
     post {
         always {
             cleanWs()
+
+            script {
+                sh """
+                IMAGE_ID=\$(docker images -q -f reference=${env.DOCKER_IMAGE_TAG})
+                if [ -n "\$IMAGE_ID" ]; then
+                    echo "Docker Image Clean...  ${env.DOCKER_IMAGE_TAG}"
+                    docker rmi ${env.DOCKER_IMAGE_TAG}
+                fi
+                """
+            }
         }
         success {
             sh 'echo "This will run only if all stages succeed"'
