빌드 정보 수정

--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 SECRET_KEY="your_secret_key"
 
 EXPRESS_HOST=localhost
-EXPRESS_PORT=4000
+EXPRESS_PORT=3000
 
 DB_DIALECT=postgres
 DB_MIGRATION_TABLE=YOUR_MIGRATION_TABLE
@@ -12,13 +12,13 @@ DB_MARIA_USER=mariadb
 DB_MARIA_PASSWORD="mariadb"
 DB_MARIA_DBNAME=mariadb
 
-DB_POSTGRES_HOST=localhost
+DB_POSTGRES_HOST=dochi-postgresql
 DB_POSTGRES_PORT=5432
 DB_POSTGRES_USER=postgres
 DB_POSTGRES_PASSWORD=postgres
 DB_POSTGRES_DBNAME=postgres
 
-REDIS_URL="redis://localhost:6379"
+REDIS_URL="redis://dochi-redis:6379"
 REDIS_PASSWORD=
 
 JWT_ACCESS_SECRET_KEY="your-access-secret-key"
