--- a/.env.development
+++ b/.env.development
@@ -1,10 +1,10 @@
-SECRET_KEY="your_secret_key"
+SECRET_KEY="dochi_is_best"
 
 EXPRESS_HOST=localhost
 EXPRESS_PORT=3000
 
 DB_DIALECT=postgres
-DB_MIGRATION_TABLE=YOUR_MIGRATION_TABLE
+DB_MIGRATION_TABLE=DMS_MIGRATION_TABLE
 
 DB_MARIA_HOST=localhost
 DB_MARIA_PORT=3306
@@ -14,9 +14,9 @@ DB_MARIA_DBNAME=mariadb
 
 DB_POSTGRES_HOST=dochi-postgresql
 DB_POSTGRES_PORT=5432
-DB_POSTGRES_USER=postgres
-DB_POSTGRES_PASSWORD=postgres
-DB_POSTGRES_DBNAME=postgres
+DB_POSTGRES_USER=dochi
+DB_POSTGRES_PASSWORD=95d2da2c5c423b418ebf7fe813726109:a67f2ef5a79f2d1f32ca37b6c8f23bac
+DB_POSTGRES_DBNAME=dochi
 
 REDIS_URL="redis://dochi-redis:6379"
 REDIS_PASSWORD=
