--- a/.env.development
+++ b/.env.development
@@ -1,24 +1,24 @@
 SECRET_KEY="dochi_is_best"
 
-EXPRESS_HOST=host.docker.internal
+EXPRESS_HOST=dev.dms-app.com
 EXPRESS_PORT=3000
 
 DB_DIALECT=postgres
 DB_MIGRATION_TABLE=DMS_MIGRATION_TABLE
 
-DB_MARIA_HOST=host.docker.internal
+DB_MARIA_HOST=dev.dms-app.com
 DB_MARIA_PORT=3306
 DB_MARIA_USER=mariadb
 DB_MARIA_PASSWORD="mariadb"
 DB_MARIA_DBNAME=mariadb
 
-DB_POSTGRES_HOST=host.docker.internal
+DB_POSTGRES_HOST=dev.dms-app.com
 DB_POSTGRES_PORT=5432
 DB_POSTGRES_USER=dochi
 DB_POSTGRES_PASSWORD=95d2da2c5c423b418ebf7fe813726109:a67f2ef5a79f2d1f32ca37b6c8f23bac
 DB_POSTGRES_DBNAME=dochi
 
-REDIS_URL="redis://host.docker.internal:6379"
+REDIS_URL="redis://dev.dms-app.com:6379"
 REDIS_PASSWORD=
 
 JWT_ACCESS_SECRET_KEY="your-access-secret-key"
