--- a/package.json
+++ b/package.json
@@ -7,17 +7,14 @@
   "license": "ISC",
   "description": "",
   "scripts": {
+    "test": "cross-env NODE_ENV=local jest --watchAll=false --detectOpenHandles ./tests/cache.test.js",
     "local": "cross-env NODE_ENV=local nodemon --exec babel-node src/app.js",
     "dev": "cross-env NODE_ENV=development babel-node src/app.js",
     "start": "cross-env NODE_ENV=production babel-node src/app.js",
     "crypto": "cross-env NODE_ENV=development babel-node ./src/utils/cryptoUtil.js",
     "migrate": "cross-env NODE_ENV=development babel-node ../node_modules/sequelize-cli/lib/sequelize db:migrate --config ./migration/config/config.js --migrations-path ./migration/migrations --models-path ./src/models",
-    "migrate:local": "cross-env NODE_ENV=local babel-node ../node_modules/sequelize-cli/lib/sequelize db:migrate --config ./migration/config/config.js --migrations-path ./migration/migrations --models-path ./src/models",
     "migrate:reset": "cross-env NODE_ENV=development babel-node ../node_modules/sequelize-cli/lib/sequelize db:migrate:undo:all --config ./migration/config/config.js --migrations-path ./migration/migrations --models-path ./src/models",
-    "migrate:local:reset": "cross-env NODE_ENV=local babel-node ../node_modules/sequelize-cli/lib/sequelize db:migrate:undo:all --config ./migration/config/config.js --migrations-path ./migration/migrations --models-path ./src/models",
-    "migration": "node migration",
-    "test": "cross-env NODE_ENV=local jest --watchAll=false --detectOpenHandles ./tests/cache.test.js",
-    "docker:build": "docker build -t dnjsakf/dms-server:latest -f ./cicd/dev/Dockerfile .",
+    "docker:build": "docker build -t dnjsakf/dms-server:latest -f ./cicd/local/Dockerfile .",
     "docker:run": "docker run -d --add-host host.docker.internal:host-gateway --network bridge --name dms-server dnjsakf/dms-server:latest"
   },
   "devDependencies": {
